fix: resume render on mobile

--- a/assets/css/pdf.css
+++ b/assets/css/pdf.css
@@ -21,5 +21,5 @@
 }
 
 .download-button a:hover {
-    background-color: #0056b3;
+    background-color: #06038D;
 }
